[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyaff4wrapper"
authors = [{name = "Konrads Klints", email = "kklints@kpmg.com.sg"}]
dynamic = ["version", "description"]
dependencies = [
    "pyaff4",
]

[project.urls]
Home = "https://github.com/truekonrads/pyaff4wrapper"
